--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,3 +1,7 @@
+v. 1.0.0
+- Add support for specifying serialization
+- Add support for schemas
+
 v. 0.0.3
 - Upgrade to .net9
 - Add in-memory implementation
